put the correct z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -328,7 +328,7 @@ body {
     border-radius: 10px;
     padding: 10px 35px 10px 10px;
     margin: 0px 5px;
-    z-index: 100;
+    z-index: 600;
 
     &._active {
         animation: top-show 0.3s ease 1 normal 0s forwards, opacity 0.7s ease 1 normal 6s forwards;
@@ -433,7 +433,7 @@ body {
     position: relative;
     justify-self: start;
     grid-gap: config;
-    z-index: 1001;
+    z-index: 500;
     transition: all 0.3s ease 0s;
     font-size: 1.5em;
     margin: 0px 0px 0px -10px;
@@ -450,6 +450,7 @@ body {
 
     &._active {
         color: #ffffff;
+        z-index: 1001;
     }
 }
 
